Support for claiming existing certificate + Store certificate in Volume
* Adds a new required "certificate name" parameter (backward
compatible): When there is an existing certificate by that name it will
be overwritten with a renewed certificate
* fullchain.pem and privatekey.pem are now stored in a Volume under /etc/letsencrypt/production/certificates/. This is until we find a better way to share the private key with other services.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,8 +4,11 @@ MAINTAINER Jan Broer <jan@festplatte.eu.org>
 RUN apk add --no-cache ca-certificates
 
 ADD build/rancher-letsencrypt-linux-amd64 /usr/bin/rancher-letsencrypt
+
 RUN chmod +x /usr/bin/rancher-letsencrypt
 
 VOLUME /etc/letsencrypt
+
+ENV DEBUG=true
 
 ENTRYPOINT ["/usr/bin/rancher-letsencrypt"]
