--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,8 +7,4 @@ ADD build/rancher-letsencrypt-linux-amd64 /usr/bin/rancher-letsencrypt
 
 RUN chmod +x /usr/bin/rancher-letsencrypt
 
-VOLUME /etc/letsencrypt
-
-ENV DEBUG=true
-
-ENTRYPOINT ["/usr/bin/rancher-letsencrypt"]
+ENTRYPOINT ["/usr/bin/rancher-letsencrypt", "-debug"]
