--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,8 @@
 FROM alpine:3.3
 MAINTAINER Jan Broer <jan@festplatte.eu.org>
 
+EXPOSE 80
+
 RUN apk add --no-cache ca-certificates
 
 ADD build/rancher-letsencrypt-linux-amd64 /usr/bin/rancher-letsencrypt
