Add missing dependency

--- a/vendor.conf
+++ b/vendor.conf
@@ -18,6 +18,7 @@ github.com/ovh/go-ovh								d220717
 github.com/pkg/errors								c605e28
 github.com/rancher/go-rancher/v2					939fd85
 github.com/Sirupsen/logrus							v0.11.5
+github.com/timewasted/linode/dns                    37e8452
 github.com/xenolf/lego								aaa8e70
 golang.org/x/crypto									ab89591
 golang.org/x/net									84f0e6f
