--- a/vendor.conf
+++ b/vendor.conf
@@ -1,9 +1,10 @@
 # package
 github.com/janeczku/rancher-letsencrypt
 
+github.com/janeczku/rancher-letsencrypt						0913231
 github.com/aws/aws-sdk-go							v1.8.6
-github.com/Azure/azure-sdk-for-go					v10.0.2-beta
-github.com/Azure/go-autorest						v8.0.0
+github.com/Azure/azure-sdk-for-go					v10.2.1-beta
+github.com/Azure/go-autorest						0545944
 github.com/dgrijalva/jwt-go							6c8dedd
 github.com/dnsimple/dnsimple-go						5a5b427
 github.com/edeckers/auroradnsclient					8b777c1
